force-app/main/default/objects/Language_Course_Instructor__c/fields/Course_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Course_Instructor__c</fullName>
    <label>Course Instructor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>