force-app/main/default/objects/Language_Course_Instructor__c/fields/Course_Score__c.field-meta.xml
<CustomField>
    <fullName>Course_Score__c</fullName>
    <label>Course Score</label>
    <type>TextArea</type>
</CustomField>